<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TA说</string>

    <string name="circle">圈子</string>
    <string name="topic">话题</string>
    <string name="mine">我的</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">刷新</string>
    <string name="nothing_found">糟糕， 没有找到相关内容！</string>

    <string name="circle_status_formatter" formatted="false">关注: %s, 帖子: %s, 角色: %s</string>
    <string name="follow">关注</string>
    <string name="post">帖子</string>
    <string name="role">角色</string>
    <string name="like">赞</string>

    <string name="default_role_name">Ming Gong</string>
    <string name="default_topic_content">Default content, cheers</string>
    <string name="default_formatted_time">9小时前</string>
    <string name="comment">评论</string>
</resources>
