<?xml version="1.0" encoding="utf-8"?>
<com.tarcle.moment.view.TopicCardView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/list_item_padding">
    <ImageView
        style="@style/UserAvatar"
        android:id="@+id/user_avatar"
        tools:src="@drawable/tarcle_icon"
        />
    <TextView
        android:id="@+id/role_name"
        style="@style/MediumText"
        android:textColor="@color/color_primary_dark"
        android:layout_toRightOf="@id/user_avatar"
        tools:text="@string/default_role_name"
        />
    <TextView
        android:id="@+id/content"
        style="@style/MediumText"
        android:layout_alignLeft="@id/role_name"
        android:layout_below="@id/role_name"
        android:textColor="@android:color/primary_text_light"
        tools:text="@string/default_topic_content"
        />
    <GridView
        android:id="@+id/images_container"
        android:layout_alignLeft="@id/content"
        android:layout_below="@id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:gravity="left"
        android:visibility="gone"
        />
    
    <TextView
        android:id="@+id/formatted_time"
        style="@style/SmallText"
        android:layout_alignLeft="@id/images_container"
        android:layout_below="@id/images_container"
        android:textColor="@color/gray"
        tools:text="@string/default_formatted_time"
        />
    <TextView
        android:id="@+id/like"
        style="@style/SmallText"
        android:textColor="@color/gray"
        android:text="@string/like"
        android:layout_alignTop="@id/formatted_time"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:id="@+id/remark"
        style="@style/SmallText"
        android:textColor="@color/gray"
        android:text="@string/comment"
        android:layout_alignTop="@id/formatted_time"
        android:layout_toLeftOf="@id/like"
        android:layout_marginRight="16dp"
        />
    <LinearLayout
        android:id="@+id/social_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/lighter_gray"
        android:padding="6dp"
        android:visibility="gone"
        android:layout_below="@id/formatted_time"
        android:layout_alignLeft="@id/formatted_time"
        >
        <TextView
            android:id="@+id/followers"
            style="@style/SmallText"
            android:textColor="@color/color_primary_dark"
            android:layout_margin="0dp"
            tools:text="@string/default_role_name"
            />
    </LinearLayout>
     
    
</com.tarcle.moment.view.TopicCardView>